<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
 	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/setting_username"
            android:textColor="#000000"
            android:textSize="25sp" />

        <View
            android:layout_width="200px"
            android:layout_height="fill_parent"
            android:layout_weight="0.44" />

        <Button
            android:id="@+id/tb_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="退出" />
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/text_ip"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:text="@string/setting_ip"
	        android:gravity="center_vertical"
	        android:textColor="#000000"
	        android:textSize="25sp" />

	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

		<Switch
		    android:id="@+id/switch_upload"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:textSize="25sp"
		    android:textOn="@string/setting_on"
		    android:textOff="@string/setting_off"
		    android:text="@string/setting_upload" /> 
    </LinearLayout>
		
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

		<Switch
		    android:id="@+id/switch_live"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:textSize="25sp"
		    android:textOn="@string/setting_on"
		    android:textOff="@string/setting_off"
		    android:text="@string/setting_live" />  
    </LinearLayout>

	
    
</LinearLayout>

